added plugins and added theme/plugin counter

--- a/documentation/install_plugin.html
+++ b/documentation/install_plugin.html
@@ -156,7 +156,7 @@ s.setAttribute('data-timestamp', +new Date());
                             <strong class="sidebar-title">Installation</strong>
                             <a href="../documentation/install_win.html" class="sidebar-link">Windows</a>
                             <a href="../documentation/install_mac.html" class="sidebar-link">Mac</a>
-                            <a href="/documentation/install_linux.html" class="sidebar-link">Linux</a>
+                            <a href="../documentation/install_linux.html" class="sidebar-link">Linux</a>
                             <strong class="sidebar-title">How to use</strong>
                             <a href="../documentation/plugin_api.html" class="sidebar-link">Plugin API</a>
                             <a href=../documentation/emotes.html class="sidebar-link">Emotes</a>
@@ -214,7 +214,7 @@ s.setAttribute('data-timestamp', +new Date());
             <strong class="mobile-nav-title">Installation</strong>
             <a href="../documentation/install_win.html" class="mobile-nav-link">Windows</a>
             <a href="../documentation/install_mac.html" class="mobile-nav-link">Mac</a>
-            <a href="/documentation/install_linux.html" class="mobile-nav-link">Linux</a>
+            <a href="../documentation/install_linux.html" class="mobile-nav-link">Linux</a>
             <strong class="mobile-nav-title">How to use</strong>
             <a href="../documentation/plugin_api.html" class="mobile-nav-link">Plugin API</a>
             <a href="../documentation/emotes.html" class="mobile-nav-link">Emotes</a>
