--- a/documentation/install_theme.html
+++ b/documentation/install_theme.html
@@ -170,8 +170,8 @@ s.setAttribute('data-timestamp', +new Date());
                             <a href="../documentation/making_theme.html" class="sidebar-link">Making Theme</a>
                             <a href="../documentation/making_plugin.html" class="sidebar-link">Making Plugin</a>
                             <strong class="sidebar-title">Downloads</strong>
-                            <a href="../documentation/themes.html" class="sidebar-link">Themes</a>
-                            <a href="../documentation/plugins.html" class="sidebar-link">Plugins</a>
+                            <a href="/themes.html" class="sidebar-link">Themes</a>
+                            <a href="/plugins.html" class="sidebar-link">Plugins</a>
                         </div>
                     </aside>
                 </div>
@@ -228,8 +228,8 @@ s.setAttribute('data-timestamp', +new Date());
             <a href="../documentation/making_theme.html" class="mobile-nav-link">Making Theme</a>
             <a href="../documentation/making_plugin.html" class="mobile-nav-link">Making Plugin</a>
             <strong class="mobile-nav-title">Downloads</strong>
-            <a href="../documentation/themes.html" class="mobile-nav-link">Themes</a>
-            <a href="../documentation/plugins.html" class="mobile-nav-link">Plugins</a>
+            <a href="/themes.html" class="mobile-nav-link">Themes</a>
+            <a href="/plugins.html" class="mobile-nav-link">Plugins</a>
 
         </div>
         <div id="mobile-lang-select-wrap">
