--- a/plugins.html
+++ b/plugins.html
@@ -138,7 +138,7 @@
           <div class="tabb third-tab active-tab">Plugins</div>
           </a> </div>
       </div>
-          <a href="/"> <img class="animated entrance logo-page" src="img/betterdocs_white.svg" alt="logo" /> </a> 
+          <a href="/"> <img class="animated logo-page fadeInDown" src="img/betterdocs_white.svg" alt="logo" /> </a> 
           <div class="tab-links fadeInDown">
         <div class="right-tabs"> <a href="store.html">
           <div class="tabb fourth-tab">Store</div>
@@ -158,7 +158,7 @@
             <div class="inner">
                   <header id="plugin-list-header">
                 <h1 id="plugin-list-title">Plugins</h1>
-                <div id="plugin-list-count" class="total-items">Total Plugins: 109</div>
+                <div id="plugin-list-count" class="total-items">Total Plugins: <div id="result" class="total-results"></div></div>
                 <input type="search" id="plugin-search-input" placeholder="Search plugins...">
               </header>
                  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -556,6 +556,42 @@
                       <a href="#Chat" class="plugin-tag">Chat</a>
                       </div>
                     </li>
+                    <li class="plugin on"> <a href="https://github.com/Zerthox/BetterDiscord-Plugins/blob/master/plugins/LinkTooltips.plugin.js" class="plugin-name" target="_blank">Link Tooltips</a>
+                      <p class="plugin-desc">Show tooltips with link URLs on hover.</p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#Zerthox" class="plugin-tag">Zerthox</a> 
+                      <a href="#Tooltips" class="plugin-tag">Tooltips</a> 
+                      <a href="#Show" class="plugin-tag">Show</a>
+                      <a href="#Link" class="plugin-tag">Link</a>
+                      <a href="#Url" class="plugin-tag">Url</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/mwittrien/BetterDiscordAddons/blob/master/Plugins/PersonalPins/PersonalPins.plugin.js" class="plugin-name" target="_blank">Personal Pins</a>
+                      <p class="plugin-desc">Allows you to pin messages in your own personal notebook. Similar to pins you can check the notes of the current channel via the controlbar on the top.</p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#DevilBro" class="plugin-tag">DevilBro</a> 
+                      <a href="#Pin" class="plugin-tag">Pin</a> 
+                      <a href="#Notebook" class="plugin-tag">Notebook</a>
+                      <a href="#Personal" class="plugin-tag">Personal</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/nirewen/BotsMutualGuilds/blob/master/BotsMutualGuilds.plugin.js" class="plugin-name" target="_blank">Bots Mutual Guilds</a>
+                      <p class="plugin-desc">Allows you to see the guilds you share with a bot.</p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#Nirewen" class="plugin-tag">Nirewen</a> 
+                      <a href="#Bots" class="plugin-tag">Bots</a> 
+                      <a href="#Mutual" class="plugin-tag">Mutual</a>
+                      <a href="#Servers" class="plugin-tag">Servers</a>
+                      <a href="#Guilds" class="plugin-tag">Guilds</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/Arashiryuu/crap/blob/master/ToastIntegrated/HideUtils/HideUtils.plugin.js" class="plugin-name" target="_blank">HideUtils</a>
+                      <p class="plugin-desc">A triplet of hide functionality compounded into one, refactored → right-click context menu support included → now more user-friendly.</p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#Arashiryuu" class="plugin-tag">Arashiryuu</a> 
+                      <a href="#Hide" class="plugin-tag">Hide</a> 
+                      </div>
+                    </li>
                     <li class="plugin on"> <a href="https://github.com/PokeTehDoge/Replacer-Plugin/blob/master/Replacer.plugin.js" class="plugin-name" target="_blank">Replacer</a>
                       <p class="plugin-desc">Replaces Text with What you Enter.</p>
                       <div class="plugin-tag-list"> 
@@ -627,6 +663,63 @@
                       <a href="#Hotkey" class="plugin-tag">Hotkey</a>
                       <a href="#Shake" class="plugin-tag">Shake</a>
                       <a href="#Forever" class="plugin-tag">Forever</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/nirewen/Quicksave" class="plugin-name" target="_blank">Quicksave</a>
+                      <p class="plugin-desc">Easy and fast way to save images!</p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#Nirewen" class="plugin-tag">Nirewen</a> 
+                      <a href="#Quick" class="plugin-tag">Quick</a>
+                      <a href="#Fast" class="plugin-tag">Fast</a>
+                      <a href="#Save" class="plugin-tag">Save</a>
+                      <a href="#Image" class="plugin-tag">Image</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/mwittrien/BetterDiscordAddons/blob/master/Plugins/ThemeRepo/ThemeRepo.plugin.js" class="plugin-name" target="_blank">Theme Repo</a>
+                      <p class="plugin-desc">Allows you to preview all themes inside the themerepo and download them on the fly. Repo button is in the theme settings.</p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#DevilBro" class="plugin-tag">DevilBro</a> 
+                      <a href="#Quick" class="plugin-tag">Quick</a>
+                      <a href="#Fast" class="plugin-tag">Fast</a>
+                      <a href="#Save" class="plugin-tag">Save</a>
+                      <a href="#Theme" class="plugin-tag">Theme</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/mwittrien/BetterDiscordAddons/blob/master/Plugins/PluginRepo/PluginRepo.plugin.js" class="plugin-name" target="_blank">Plugin Repo</a>
+                      <p class="plugin-desc">Allows you to look at all plugins from the plugin repo and download them on the fly. Repo button is in the plugin settings.</p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#DevilBro" class="plugin-tag">DevilBro</a> 
+                      <a href="#Quick" class="plugin-tag">Quick</a>
+                      <a href="#Fast" class="plugin-tag">Fast</a>
+                      <a href="#Save" class="plugin-tag">Save</a>
+                      <a href="#Plugin" class="plugin-tag">Plugin</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/Inve1951/BetterDiscordStuff/blob/master/plugins/linkProfilePicture.plugin.js" class="plugin-name" target="_blank">Link-Profile-Picture</a>
+                      <p class="plugin-desc">Lets you click users' avatars on their profile page to view a bigger version in your browser.</p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#Square" class="plugin-tag">Square</a> 
+                      <a href="#Avatar" class="plugin-tag">Avatar</a>
+                      <a href="#User" class="plugin-tag">User</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/Inve1951/BetterDiscordStuff/blob/master/plugins/scrollToLast.plugin.js" class="plugin-name" target="_blank">Scroll-To-Last</a>
+                      <p class="plugin-desc">Always scroll to last message when entering a channel.</p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#Square" class="plugin-tag">Square</a> 
+                      <a href="#Scroll" class="plugin-tag">Scroll</a>
+                      <a href="#Last" class="plugin-tag">Last</a>
+                      <a href="#Message" class="plugin-tag">Message</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/Inve1951/BetterDiscordStuff/blob/master/plugins/botInfo.plugin.js" class="plugin-name" target="_blank">Bot Info</a>
+                      <p class="plugin-desc">Shows bots' infos from `discordbots.org`.
+						  <b>Depends on samogot's Discord Internals Library</b></p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#Square" class="plugin-tag">Square</a> 
+                      <a href="#Bot" class="plugin-tag">Bot</a>
+                      <a href="#Info" class="plugin-tag">Info</a>
+                      <a href="#Details" class="plugin-tag">Details</a>
                       </div>
                     </li>
                     <li class="plugin on"> <a href="https://github.com/rauenzi/BetterDiscordAddons/tree/master/Plugins/ServerSorter" class="plugin-name" target="_blank">ServerSorter</a>
@@ -903,12 +996,53 @@ Requires React-Devtools being installed in your chrome browser:
                 });
             });
         });
-    </script> 
+	
+	$(function() {
+    $.fn.sortList = function() {
+    var mylist = $(this);
+    var listitems = $('li', mylist).get();
+    listitems.sort(function(a, b) {
+        var compA = $(a).text().toUpperCase();
+        var compB = $(b).text().toUpperCase();
+        return (compA < compB) ? -1 : 1;
+    });
+    $.each(listitems, function(i, itm) {
+        mylist.append(itm);
+    });
+   }
+
+    $("ul#plugin-list").sortList();
+
+});
+	
+	// selector to parent element (best approach by id)
+var parent = document.querySelector("ul#plugin-list"),
+    // take items (parent.children) into array
+    itemsArray = Array.prototype.slice.call(parent.children);
+
+// sort items in array by custom criteria
+itemsArray.sort(function (a, b) {
+    // inner text suits best (even when formated somehow)
+    if (a.innerText < b.innerText) return -1;
+    if (a.innerText > b.innerText) return 1;
+    return 0;
+});
+
+// reorder items in the DOM
+itemsArray.forEach(function (item) {
+    // one by one move to the end in correct order
+    parent.appendChild(item);
+});
+	var count = $('ul#plugin-list').children().length;
+
+$('#result').text(count);
+    </script>
 <!-- bootstrap --> 
 <script type="text/javascript" src="js/bootstrap.min.js"></script> 
 <!-- countdown --> 
 <script type="text/javascript" src="js/jquery.lwtCountdown-1.0.js"></script> 
-<!-- constellation (star-effect) --> 
+<!-- constellation (star-effect) -->
+<script type="text/javascript" src="js/constellation.js"></script> 
 <!-- hello bar js --> 
 <script src="https://my.hellobar.com/373de62a03c0d696505b5a07d1d53eb7861961de.js" type="text/javascript" charset="utf-8" async="async"></script>
 <!-- push js --> 
