--- a/documentation/making_plugin.html
+++ b/documentation/making_plugin.html
@@ -229,24 +229,24 @@ s.setAttribute('data-timestamp', +new Date());
                             <strong class="sidebar-title">Getting Started</strong>
                             <a href="../documentation/index.html" class="sidebar-link">Overview</a>
                             <strong class="sidebar-title">Installation</strong>
-                            <a href="https://betterdocs.net/documentation/install_win.html" class="sidebar-link">Windows</a>
-                            <a href="https://betterdocs.net/documentation/install_mac.html" class="sidebar-link">Mac</a>
-                            <a href="https://betterdocs.net/documentation/install_linux.html" class="sidebar-link">Linux</a>
+                            <a href="../documentation/install_win.html" class="sidebar-link">Windows</a>
+                            <a href="../documentation/install_mac.html" class="sidebar-link">Mac</a>
+                            <a href="../documentation/install_linux.html" class="sidebar-link">Linux</a>
                             <strong class="sidebar-title">How to use</strong>
-                            <a href="https://betterdocs.net/documentation/plugin_api.html" class="sidebar-link">Plugin API</a>
-                            <a href="https://betterdocs.net/documentation/emotes.html" class="sidebar-link">Emotes</a>
+                            <a href="../documentation/plugin_api.html" class="sidebar-link">Plugin API</a>
+                            <a href="../documentation/emotes.html" class="sidebar-link">Emotes</a>
                             <strong class="sidebar-title">Troubleshooting</strong>
-                            <a href="https://betterdocs.net/documentation/betterdiscord_troubleshoot.html" class="sidebar-link">BetterDiscord</a>
-                            <a href="https://betterdocs.net/documentation/theme_troubleshoot.html" class="sidebar-link">Themes</a>
-                            <a href="https://betterdocs.net/documentation/plugin_troubleshoot.html" class="sidebar-link">Plugins</a>
+                            <a href="../documentation/betterdiscord_troubleshoot.html" class="sidebar-link">BetterDiscord</a>
+                            <a href="../documentation/theme_troubleshoot.html" class="sidebar-link">Themes</a>
+                            <a href="../documentation/plugin_troubleshoot.html" class="sidebar-link">Plugins</a>
                             <strong class="sidebar-title">Guides</strong>
-                            <a href="https://betterdocs.net/documentation/install_theme.html" class="sidebar-link">Installing Theme</a>
-                            <a href="https://betterdocs.net/documentation/install_plugin.html" class="sidebar-link">Installing Plugin</a>
-                            <a href="https://betterdocs.net/making_theme.html" class="sidebar-link">Making Theme</a>
-                            <a href="https://betterdocs.net/making_plugin.html" class="sidebar-link current">Making Plugin</a>
+                            <a href="../documentation/install_theme.html" class="sidebar-link">Installing Theme</a>
+                            <a href="../documentation/install_plugin.html" class="sidebar-link">Installing Plugin</a>
+                            <a href="../documentation/making_theme.html" class="sidebar-link">Making Theme</a>
+                            <a href="../making_plugin.html" class="sidebar-link current">Making Plugin</a>
                             <strong class="sidebar-title">Downloads</strong>
-                            <a href="https://betterdocs.net/themes.html" class="sidebar-link">Themes</a>
-                            <a href="https://betterdocs.net/plugins.html" class="sidebar-link">Plugins</a>
+                            <a href="/themes.html" class="sidebar-link">Themes</a>
+                            <a href="/plugins.html" class="sidebar-link">Plugins</a>
                         </div>
                     </aside>
                     </div>
@@ -287,24 +287,24 @@ s.setAttribute('data-timestamp', +new Date());
                 <strong class="mobile-nav-title">Getting Started</strong>
                 <a href="../documentation/index.html" class="mobile-nav-link">Overview</a>
                 <strong class="mobile-nav-title">Installation</strong>
-                <a href="https://betterdocs.net/documentation/install_win.html" class="mobile-nav-link">Windows</a>
-                <a href="https://betterdocs.net/documentation/install_mac.html" class="mobile-nav-link">Mac</a>
-                <a href="https://betterdocs.net/documentation/install_linux.html" class="mobile-nav-link">Linux</a>
+                <a href="../documentation/install_win.html" class="mobile-nav-link">Windows</a>
+                <a href="../documentation/install_mac.html" class="mobile-nav-link">Mac</a>
+                <a href="../documentation/install_linux.html" class="mobile-nav-link">Linux</a>
                 <strong class="mobile-nav-title">How to use</strong>
-                <a href="https://betterdocs.net/documentation/plugin_api.html" class="mobile-nav-link">Plugin API</a>
-                <a href="https://betterdocs.net/documentation/emotes.html" class="mobile-nav-link">Emotes</a>
+                <a href="../documentation/plugin_api.html" class="mobile-nav-link">Plugin API</a>
+                <a href="../documentation/emotes.html" class="mobile-nav-link">Emotes</a>
                 <strong class="mobile-nav-title">Troubleshooting</strong>
-                <a href="https://betterdocs.net/documentation/betterdiscord_troubleshoot.html" class="mobile-nav-link">BetterDiscord</a>
-                <a href="https://betterdocs.net/documentation/theme_troubleshoot.html" class="mobile-nav-link">Themes</a>
-                <a href="https://betterdocs.net/documentation/plugin_troubleshoot.html" class="mobile-nav-link">Plugins</a>
+                <a href="../documentation/betterdiscord_troubleshoot.html" class="mobile-nav-link">BetterDiscord</a>
+                <a href="../documentation/theme_troubleshoot.html" class="mobile-nav-link">Themes</a>
+                <a href="../documentation/plugin_troubleshoot.html" class="mobile-nav-link">Plugins</a>
                 <strong class="mobile-nav-title">Guides</strong>
-                <a href="https://betterdocs.net/documentation/install_theme.html" class="mobile-nav-link">Installing Themes</a>
-                <a href="https://betterdocs.net/documentation/install_plugin.html" class="mobile-nav-link">Installing Plugins</a>
-                <a href="https://betterdocs.net/making_theme.html" class="mobile-nav-link">Making Theme</a>
-                <a href="https://betterdocs.net/making_plugin.html" class="mobile-nav-link current">Making Plugin</a>
+                <a href="../documentation/install_theme.html" class="mobile-nav-link">Installing Themes</a>
+                <a href="../documentation/install_plugin.html" class="mobile-nav-link">Installing Plugins</a>
+                <a href="../documentation/making_theme.html" class="mobile-nav-link">Making Theme</a>
+                <a href="../documentation/making_plugin.html" class="mobile-nav-link current">Making Plugin</a>
                 <strong class="mobile-nav-title">Downloads</strong>
-                <a href="https://betterdocs.net/themes.html" class="mobile-nav-link">Themes</a>
-                <a href="https://betterdocs.net/plugins.html" class="mobile-nav-link">Plugins</a>
+                <a href="/themes.html" class="mobile-nav-link">Themes</a>
+                <a href="/plugins.html" class="mobile-nav-link">Plugins</a>
 
             </div>
             <div id="mobile-lang-select-wrap">
