--- a/themes/bootyfuldiscord.html
+++ b/themes/bootyfuldiscord.html
@@ -127,7 +127,7 @@
           <div class="tabb third-tab">Plugins</div>
           </a> </div>
       </div>
-      <a href="/"> <img class="animated entrance logo-page" src="../img/betterdocs_white.svg" alt="logo" /> </a>
+      <a href="/"> <img class="animated logo-page fadeInDown" src="../img/betterdocs_white.svg" alt="logo" /> </a>
       <div class="tab-links fadeInDown">
         <div class="right-tabs"> <a href="../store.html">
           <div class="tabb fourth-tab">Store</div>
