--- a/themes.html
+++ b/themes.html
@@ -187,6 +187,20 @@ lazyload(images);
                   <p class="plugin-desc">Beautiful theme all I have to say. </p>
                   <div class="plugin-tag-list"> <a href="#Omniscient" class="plugin-tag">Omniscient</a> <a href="#Blue" class="plugin-tag">Blue</a> <a href="#Transparent" class="plugin-tag tag-invis">Transparent</a> <a href="#Dark" class="plugin-tag tag-invis">Dark</a> <a href="#BetterDiscord" class="plugin-tag tag-invis">BetterDiscord</a> </div>
                 </li>
+		<li class="plugin on">
+                  <div class="plugin-screenshot"> <img src="https://i.imgur.com/25W0otB.gif" data-src="https://www.twitchcord.com/images/prev-10.png" class="lazy plugin-screenshot-img" width="auto" height="auto"> <a href="https://betterdocs.net/themes/twitchcord.html" class="plugin-preview-link"><i class="fa fa-eye"></i></a> </div>
+                  <a href="https://betterdocs.net/themes/twitchcord.html" class="plugin-name">Twitchcord</a>
+                  <p class="plugin-desc">Twitchcord is a theme created with the idea of bringing Twitch to Discord, combined with a little extra personality.
+Every aspect and element is carefully crafted and themed with both aesthetics and performance in mind.</p>
+                  <div class="plugin-tag-list"> 
+			  <a href="#BakedPVP" class="plugin-tag">BakedPVP</a> 
+			  <a href="#Purple" class="plugin-tag">Blue</a>
+			  <a href="#Twitch" class="plugin-tag">Twitch</a>
+			  <a href="#Solid" class="plugin-tag tag-invis">Solid</a> 
+			  <a href="#Dark" class="plugin-tag tag-invis">Dark</a> 
+			  <a href="#BetterDiscord" class="plugin-tag tag-invis">BetterDiscord</a> 
+		</div>
+                </li>
                 <li class="plugin on">
                   <div class="plugin-screenshot"> <img src="https://i.imgur.com/25W0otB.gif" data-src="themes/images/dark_matter.jpg" class="lazy plugin-screenshot-img" width="auto" height="auto"> <a href="https://betterdocs.net/themes/darkmatter.html" class="plugin-preview-link"><i class="fa fa-eye"></i></a> </div>
                   <a href="https://betterdocs.net/themes/darkmatter.html" class="plugin-name">Dark Matter</a>
