--- a/themes/assets/lightdiscord.html
+++ b/themes/assets/lightdiscord.html
@@ -65,25 +65,25 @@
                                         <div class="guild unread">
                                             <div draggable="true">
                                                 <div class="guild-inner" draggable="false" style="border-radius: 25px;">
-                                                    <a draggable="false" class="avatar-small" href="/channels/86004744966914048/209971084286623744" style="background-image: url(&quot;https://cdn.discordapp.com/icons/86004744966914048/c8d49dc02248e1f55caeb897c3e1a26e.png&quot;);"></a>
+                                                    <a draggable="false" class="avatar-small" href="#" style="background-image: url(&quot;https://cdn.discordapp.com/icons/86004744966914048/c8d49dc02248e1f55caeb897c3e1a26e.png&quot;);"></a>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="guild unread">
                                             <div draggable="true">
                                                 <div class="guild-inner" draggable="false" style="border-radius: 25px;">
-                                                    <a draggable="false" class="avatar-small" href="/channels/153708594091655168/226489209488277504" style="background-image: url(&quot;https://cdn.discordapp.com/icons/153708594091655168/297695be9596b5ccde7bff923e9ff61b.png&quot;);"></a>
+                                                    <a draggable="false" class="avatar-small" href="#" style="background-image: url(&quot;https://cdn.discordapp.com/icons/153708594091655168/297695be9596b5ccde7bff923e9ff61b.png&quot;);"></a>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="guild selected unread">
                                             <div draggable="true">
-                                                <div class="guild-inner" draggable="false" style="border-radius: 15px; background-color: rgb(114, 137, 218);"><a draggable="false" class="avatar-small" href="/channels/319331044132126721/319331044132126721" style="font-size: 18px;">SN</a></div>
+                                                <div class="guild-inner" draggable="false" style="border-radius: 15px; background-color: rgb(114, 137, 218);"><a draggable="false" class="avatar-small" href="#" style="font-size: 18px;">SN</a></div>
                                             </div>
                                         </div>
                                         <div class="guild unread">
                                             <div draggable="true">
-                                                <div class="guild-inner" draggable="false" style="border-radius: 25px; background-color: rgb(47, 49, 54);"><a draggable="false" class="avatar-small" href="/channels/230541745639653377/230541745639653377" style="font-size: 16px;">?</a></div>
+                                                <div class="guild-inner" draggable="false" style="border-radius: 25px; background-color: rgb(47, 49, 54);"><a draggable="false" class="avatar-small" href="#" style="font-size: 16px;">?</a></div>
                                             </div>
                                         </div>
                                         <button class="guild guilds-add"><span class="guilds-add-inner">+</span></button>
@@ -432,7 +432,7 @@
                                             <div class="inner-ptMwR-">
                                                 <div class="rtc-connection-status
                        rtc-connection-status-connected
-                       rtc-connection-quality-fine"><span class="ping"></span>Voice Connected</div><a class="channel-3YGMy1" href="/channels/319331044132126721/319331044132126721">voice channel / Server Name</a></div>
+                       rtc-connection-quality-fine"><span class="ping"></span>Voice Connected</div><a class="channel-3YGMy1" href="#">voice channel / Server Name</a></div>
                                             <div class="flex-lFgbSz flex-3B1Tl4 horizontal-2BEEBe horizontal-2VE-Fw flex-3B1Tl4 directionRow-yNbSvJ justifyStart-2yIZo0 alignStretch-1hwxMa noWrap-v6g9vO" style="flex: 0 0 auto;">
                                                 <div class="buttonInfo-3r6H7z button-3WJ5FX"></div>
                                                 <div class="buttonDisconnect-3xZpYL button-3WJ5FX"></div>
