--- a/store.html
+++ b/store.html
@@ -186,11 +186,10 @@
 							</li>
 							<li style="list-style: none">
 								<br>
-								<p><a href="https://www.paypal.me/Chaotiic/15" target="_blank">Purchase Now $15</a></p>
+								<p><a href="https://www.paypal.me/Chaotiic/15" target="_blank">Purchase Now <p style="text-decoration: line-through;">$15</p> $10</a></p>
 							</li>
 							<div class="shop-stock">
-  								<div style="text-decoration: underline;font-size: 20px;">5</div>
-  									<div class="test113" style="margin-top: 6px;">In Stock</div>
+  									<div class="test113" style="margin-top: 6px;">Available</div>
 							</div>
 						</ul>
 					</div>
@@ -232,11 +231,10 @@
 							</li>
 							<li style="list-style: none">
 								<br>
-								<p><a href="https://www.paypal.me/Chaotiic/25" target="_blank">Purchase Now $25</a></p>
+								<p><a href="https://www.paypal.me/Chaotiic/25" target="_blank">Purchase Now <p style="text-decoration: line-through;">$25</p> $20</a></p>
 							</li>
 							<div class="shop-stock">
-  								<div style="text-decoration: underline;font-size: 20px;">5</div>
-  									<div class="test113" style="margin-top: 6px;">In Stock</div>
+  									<div class="test113" style="margin-top: 6px;">Available</div>
 							</div>
 						</ul>
 					</div>
