--- a/store.html
+++ b/store.html
@@ -185,9 +185,9 @@
 								<a href="https://github.com/leovoel/BeautifulDiscord" target="_blank">BeautifulDiscord</a>
 							</li>
 							<li style="list-style: none">
-								<br>
-								<p><a href="https://www.paypal.me/Chaotiic/15" target="_blank">Purchase Now <p style="text-decoration: line-through;">$15</p> $10</a></p>
-							</li>
+<br>
+<p><a href="https://www.paypal.me/Chaotiic/10" target="_blank">Purchase Now <span style="text-decoration: line-through;">$15</span> $10</p>
+</li>
 							<div class="shop-stock">
   									<div class="test113" style="margin-top: 6px;">Available</div>
 							</div>
@@ -230,9 +230,9 @@
 								<a href="https://github.com/leovoel/BeautifulDiscord" target="_blank">BeautifulDiscord</a>
 							</li>
 							<li style="list-style: none">
-								<br>
-								<p><a href="https://www.paypal.me/Chaotiic/25" target="_blank">Purchase Now <p style="text-decoration: line-through;">$25</p> $20</a></p>
-							</li>
+<br>
+<p><a href="https://www.paypal.me/Chaotiic/20" target="_blank">Purchase Now <span style="text-decoration: line-through;">$25</span> $20</p>
+</li>
 							<div class="shop-stock">
   									<div class="test113" style="margin-top: 6px;">Available</div>
 							</div>
