--- a/store.html
+++ b/store.html
@@ -186,7 +186,7 @@
 							</li>
 							<li style="list-style: none">
 <br>
-<p><a href="https://www.paypal.me/Chaotiic/10" target="_blank">Purchase Now <span style="text-decoration: line-through;">$15</span> $10</p>
+<p><a href="https://www.paypal.me/Chaotiic/10" target="_blank">Purchase Now <span style="text-decoration: line-through;">$15</span> $10</p></a>
 </li>
 							<div class="shop-stock">
   									<div class="test113" style="margin-top: 6px;">Available</div>
