--- a/plugins.html
+++ b/plugins.html
@@ -58,13 +58,13 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,600,700" type="text/css">
 
     <!-- CSS IMPORT FOR MAIN STYLE AND COLOR SCHEME -->
-    <link rel="stylesheet" href="https://betterdocs.net/documentation/stylesheets/style.css">
+    <link rel="stylesheet" href="https://0mniscient.github.io/BetterDiscord/documentation/stylesheets/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
     <!-- CSS IMPORT -->
-	<link rel="stylesheet" href="css/compiledstyle.css" type="text/css">
-    <link rel="stylesheet" href="css/pushy.css" type="text/css">
+	<link rel="stylesheet" href="https://0mniscient.github.io/BetterDiscord/css/compiledstyle.css" type="text/css">
+    <link rel="stylesheet" href="https://0mniscient.github.io/BetterDiscord/css/pushy.css" type="text/css">
 
     <!-- support HTML5 elements and media queries for IE9 -->
     <!--[if lt IE 9]>
