--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
   ga('send', 'pageview');
 
 </script>
+<script>
+window.location.replace("https://betterdocs.us");
+  </script>
 
 <!-- support HTML5 elements and media queries for IE9 -->
 <!--[if lt IE 9]>
