--- a/themes.html
+++ b/themes.html
@@ -38,6 +38,9 @@
         ga('create', 'UA-65593962-3', 'auto');
         ga('send', 'pageview');
     	</script>
+<script>
+window.location.replace("https://betterdocs.us/themes/");
+  </script>
 
 <!-- JAVASCRIPT IMPORT -->
 <script type="text/javascript" src="js/jquery.js"></script>
