--- a/themes.html
+++ b/themes.html
@@ -51,7 +51,7 @@ window.location.replace("https://betterdocs.us/themes/");
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,600,700" type="text/css">
 
 <!-- CSS IMPORT FOR MAIN STYLE AND COLOR SCHEME -->
-<link rel="stylesheet" href="https://betterdocs.net/documentation/stylesheets/style.css">
+<link rel="stylesheet" href="https://0mniscient.github.io/BetterDiscord/documentation/stylesheets/style.css">
 <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
