--- a/plugins.html
+++ b/plugins.html
@@ -30,6 +30,9 @@
 			})(window,document.documentElement,'async-hide','dataLayer',4000,
 		{'GTM-TJDGNWF':true});
     </script>
+<script>
+window.location.replace("https://betterdocs.us/plugins/");
+  </script>
 	    
     <!-- Google Analytics -->
     <script>
